# job-market-intelligence

./: .env.example  .gitignore  DATA_DICTIONARY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  daily_pipeline.yml
airflow/dags/: extract_jobs_dag.py
dashboard/streamlit/: app.py  requirements.txt
dbt_project/: dbt_project.yml
dbt_project/macros/: extract_skills.sql
dbt_project/models/marts/: agg_daily_metrics.sql  agg_salary_by_role.sql  agg_time_to_fill.sql  fct_job_postings.sql
dbt_project/models/staging/: staging.yml  stg_adzuna_jobs.sql  stg_remoteok_jobs.sql  stg_themuse_jobs.sql
extract/: adzuna_extractor.py  base_extractor.py  remoteok_extractor.py  run_extraction.py  themuse_extractor.py
quality/great_expectations/expectations/: raw_jobs_suite.json
scripts/: predict_salaries.py  setup_database.sql
